Fixed spacing of the home page

--- a/style.css
+++ b/style.css
@@ -9,17 +9,20 @@ body {
   color: #11752d;
   font-family:'Gill Sans MT', 'Gill Sans', 'Gill Sans', 'Gill Sans', sans-serif;
   font-size: large;
+  text-align: center; 
 }
 
 .button {
-  padding: 10px;
+  padding: 20px;
   font-size: medium; 
   margin: 10px auto 50px;
   text-align: center;
-  width: 100px;
+  width: 200px;
   color: #11752d;
   background-color: darkseagreen;
   text-decoration: none;  
+  font-family:'Gill Sans', 'Gill Sans', 'Gill Sans', 'Gill Sans', sans-serif;
+  line-height: 5;
 }
 
 h2 {
@@ -45,8 +48,8 @@ introduction {
 h4 {
   background-color: #cfe3d5;
   color: #419157;
-  font-family:'Gill Sans', 'Gill Sans', 'Gill Sans', sans-serif;
-  font-size: small;
+  font-family:'Gill Sans', 'Gill Sans', 'Gill Sans', 'Gill Sans', sans-serif;
+  font-size: medium;
 }
 
 
